Fixed out of box text

--- a/assets/css/post_page.css
+++ b/assets/css/post_page.css
@@ -269,7 +269,7 @@ background: rgba(0,0,0,0.3)
 .in_page_link {
   color: black;
   text-align: left;
-  width: 150px;
+  min-width: 150px;
   padding: 5px;
   display: inline-block;
   margin: 5px;
